force-app/main/default/objects/SAP_Material_Mapping__c/SAP_Material_Mapping__c.object-meta.xml
<CustomObject>
    <label>SAP Material Mapping</label>
    <nameField>
        <label>SAP Material Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Material Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>