force-app/main/default/objects/SAP_Material_Mapping__c/fields/Accesory_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Accesory_Type_Name__c</fullName>
    <label>Accesory Type Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1/2&quot;</fullName>
            </value>
            <value>
                <fullName>1/2&quot; NP BR</fullName>
            </value>
            <value>
                <fullName>1/2&quot; PLX</fullName>
            </value>
            <value>
                <fullName>1 1/2&quot;</fullName>
            </value>
            <value>
                <fullName>1 1/2&quot; NP BR</fullName>
            </value>
            <value>
                <fullName>1 1/2&quot; PLX</fullName>
            </value>
            <value>
                <fullName>7/8&quot;</fullName>
            </value>
            <value>
                <fullName>7/8&quot; NP BR</fullName>
            </value>
            <value>
                <fullName>7/8&quot; PLX</fullName>
            </value>
            <value>
                <fullName>Windowed 1 1/2&quot;</fullName>
            </value>
            <value>
                <fullName>Windowed 7/8&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>