force-app/main/default/objects/SAP_Material_Mapping__c/fields/Accessory_Has_Window__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Has_Window__c</fullName>
    <label>Accessory Has Window</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>