force-app/main/default/objects/SAP_Material_Mapping__c/fields/Accessory_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Part_Number__c</fullName>
    <label>Accessory Part Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>099-03700</fullName>
            </value>
            <value>
                <fullName>099-03915</fullName>
            </value>
            <value>
                <fullName>099-03919</fullName>
            </value>
            <value>
                <fullName>099-03920</fullName>
            </value>
            <value>
                <fullName>950-00-030</fullName>
            </value>
            <value>
                <fullName>950-00-042</fullName>
            </value>
            <value>
                <fullName>950-00-058</fullName>
            </value>
            <value>
                <fullName>950-01060</fullName>
            </value>
            <value>
                <fullName>950-01061</fullName>
            </value>
            <value>
                <fullName>950-02237</fullName>
            </value>
            <value>
                <fullName>950-02942</fullName>
            </value>
            <value>
                <fullName>C-ACC-03926-000</fullName>
            </value>
            <value>
                <fullName>C-ACC-06793-000</fullName>
            </value>
            <value>
                <fullName>C-ACC-07411-000-01</fullName>
            </value>
            <value>
                <fullName>C-ACC-07412-000-01</fullName>
            </value>
            <value>
                <fullName>C-ACC-07413-000-01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>