force-app/main/default/objects/SAP_Material_Mapping__c/fields/Build_Date_Warranty_Expiration_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Build_Date_Warranty_Expiration_in_Months__c</fullName>
    <inlineHelpText>The number of Month from the Build Date in which the warranty expires. Blank for most materials</inlineHelpText>
    <label>Build Date Warranty Expiration in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>