force-app/main/default/objects/SAP_Material_Mapping__c/fields/Eligible_for_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Renewal__c</fullName>
    <label>Eligible for Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>