force-app/main/default/objects/SAP_Material_Mapping__c/fields/Firmware_Version__c.field-meta.xml
<CustomField>
    <fullName>Firmware_Version__c</fullName>
    <inlineHelpText>The Firmware Version (under the Arm Details section)</inlineHelpText>
    <label>Firmware Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>