force-app/main/default/objects/SAP_Material_Mapping__c/fields/Installer_Link__c.field-meta.xml
<CustomField>
    <fullName>Installer_Link__c</fullName>
    <description>Link for Software Downloads. Primarily for use on Trial software</description>
    <inlineHelpText>Link for Software Downloads. Primarily for use on Trial software</inlineHelpText>
    <label>Installer Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>