force-app/main/default/objects/SAP_Material_Mapping__c/fields/Is_Bluetooth__c.field-meta.xml
<CustomField>
    <fullName>Is_Bluetooth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bluetooth ?</label>
    <type>Checkbox</type>
</CustomField>