force-app/main/default/objects/SAP_Material_Mapping__c/fields/Is_Trial_Software__c.field-meta.xml
<CustomField>
    <fullName>Is_Trial_Software__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies the item as software that can be given for trial</description>
    <inlineHelpText>Identifies the item as software that can be given for trial</inlineHelpText>
    <label>Is Trial Software</label>
    <type>Checkbox</type>
</CustomField>