force-app/main/default/objects/SAP_Material_Mapping__c/fields/Licensing_Method__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Method__c</fullName>
    <inlineHelpText>How are licenses obtained?</inlineHelpText>
    <label>Licensing Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Is_Trial_Software__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMS</fullName>
            </value>
            <value>
                <fullName>Download Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>