force-app/main/default/objects/SAP_Material_Mapping__c/fields/Maintenanc_Renewal_Contact_Source__c.field-meta.xml
<CustomField>
    <fullName>Maintenanc_Renewal_Contact_Source__c</fullName>
    <inlineHelpText>Where should the mapping get the Maintenance Renewal Contact from?</inlineHelpText>
    <label>Maintenanc/Renewal Contact Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>contact</fullName>
                <default>true</default>
                <label>contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>