force-app/main/default/objects/SAP_Material_Mapping__c/fields/Model_No__c.field-meta.xml
<CustomField>
    <fullName>Model_No__c</fullName>
    <label>Model No</label>
    <length>250</length>
    <type>Text</type>
</CustomField>