force-app/main/default/objects/SAP_Material_Mapping__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3D Imager</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>BuildIT Software</fullName>
            </value>
            <value>
                <fullName>Dental Scanner</fullName>
            </value>
            <value>
                <fullName>FaroArm</fullName>
            </value>
            <value>
                <fullName>Gage</fullName>
            </value>
            <value>
                <fullName>Galvo Systems</fullName>
            </value>
            <value>
                <fullName>Industrial Scanner</fullName>
            </value>
            <value>
                <fullName>Laser Line Probe (LLP)</fullName>
            </value>
            <value>
                <fullName>Laser Scanner (LS)</fullName>
            </value>
            <value>
                <fullName>Laser Tracker</fullName>
            </value>
            <value>
                <fullName>Projector</fullName>
            </value>
            <value>
                <fullName>ScanPlan</fullName>
            </value>
            <value>
                <fullName>SDK</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>