force-app/main/default/objects/SAP_Material_Mapping__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>6DoF Probe</fullName>
            </value>
            <value>
                <fullName>8-Axis</fullName>
            </value>
            <value>
                <fullName>Advantage</fullName>
            </value>
            <value>
                <fullName>AMP</fullName>
            </value>
            <value>
                <fullName>Arm Section</fullName>
            </value>
            <value>
                <fullName>AutoCad (Discontinued)</fullName>
            </value>
            <value>
                <fullName>Ballbar Kit</fullName>
            </value>
            <value>
                <fullName>Base Module</fullName>
            </value>
            <value>
                <fullName>Battery Module</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>CMM (Discontinued)</fullName>
            </value>
            <value>
                <fullName>Cobalt</fullName>
            </value>
            <value>
                <fullName>Cobalt Design</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>Dental Plug-in</fullName>
            </value>
            <value>
                <fullName>Dental Scanner</fullName>
            </value>
            <value>
                <fullName>Design ScanArm</fullName>
            </value>
            <value>
                <fullName>Design ScanArm 2.0</fullName>
            </value>
            <value>
                <fullName>Design ScanArm 2.5</fullName>
            </value>
            <value>
                <fullName>Design ScanArm 2.5C</fullName>
            </value>
            <value>
                <fullName>Digital Template</fullName>
            </value>
            <value>
                <fullName>DMVS</fullName>
            </value>
            <value>
                <fullName>DOT Plate</fullName>
            </value>
            <value>
                <fullName>DS LLP</fullName>
            </value>
            <value>
                <fullName>DT Plotter</fullName>
            </value>
            <value>
                <fullName>Edge</fullName>
            </value>
            <value>
                <fullName>Focus 3D</fullName>
            </value>
            <value>
                <fullName>Focus 3D X</fullName>
            </value>
            <value>
                <fullName>Focus 3D X HDR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>