force-app/main/default/objects/SAP_Material_Mapping__c/fields/Reason_Cannot_Renew__c.field-meta.xml
<CustomField>
    <fullName>Reason_Cannot_Renew__c</fullName>
    <label>Reason Cannot Renew</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End of Life</fullName>
            </value>
            <value>
                <fullName>Customer Damaged</fullName>
            </value>
            <value>
                <fullName>Natural Disaster Damaged</fullName>
            </value>
            <value>
                <fullName>Other (see Asset Notes)</fullName>
            </value>
            <value>
                <fullName>No Warranty Offered</fullName>
            </value>
            <value>
                <fullName>Scapped</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>