force-app/main/default/objects/SAP_Material_Mapping__c/fields/Serviceable__c.field-meta.xml
<CustomField>
    <fullName>Serviceable__c</fullName>
    <description>This field indicates the products Serviceable status. This includes Certifiable and Service statuses</description>
    <inlineHelpText>This field indicates the products Serviceable status. This includes Certifiable and Service statuses</inlineHelpText>
    <label>Serviceable</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certifiable Only</fullName>
            </value>
            <value>
                <fullName>Serviceable Only</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>