force-app/main/default/objects/SAP_Material_Mapping__c/fields/Serviceable_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Serviceable_End_Date__c</fullName>
    <description>This is the last date the product will be serviceable. The product will fall off of the RMA list after this date</description>
    <inlineHelpText>This is the last date the product will be serviceable. The product will fall off of the RMA list after this date</inlineHelpText>
    <label>Serviceable End Date</label>
    <type>Date</type>
</CustomField>