force-app/main/default/objects/SAP_Material_Mapping__c/fields/Software_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Software_Bundle__c</fullName>
    <label>Software Bundle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDU Version</fullName>
            </value>
            <value>
                <fullName>Full Version</fullName>
            </value>
            <value>
                <fullName>Off-Line Version</fullName>
            </value>
            <value>
                <fullName>Probing Version</fullName>
            </value>
            <value>
                <fullName>Transition Version</fullName>
            </value>
            <value>
                <fullName>Upgrade Version</fullName>
            </value>
            <value>
                <fullName>Core License</fullName>
            </value>
            <value>
                <fullName>AddOn</fullName>
            </value>
            <value>
                <fullName>License Container</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>