force-app/main/default/objects/SAP_Material_Mapping__c/fields/Software_Version__c.field-meta.xml
<CustomField>
    <fullName>Software_Version__c</fullName>
    <description>Field that helps certain material have a software version when syncing serialized assets from SAP</description>
    <label>Software Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>