force-app/main/default/objects/SAP_Material_Mapping__c/fields/Use_BuildDate_as_LastCertDate__c.field-meta.xml
<CustomField>
    <fullName>Use_BuildDate_as_LastCertDate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you want the Last Certification Date to be set to the Build Date when a piece of equipment ships.</inlineHelpText>
    <label>Use BuildDate as LastCertDate</label>
    <type>Checkbox</type>
</CustomField>