force-app/main/default/objects/SAP_Material_Mapping__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>7/22/19 YYT: Set chart colors (INC0030611).
2/19/19: JNR-Added value (WR4577).
1/7/19: JNR-Updated values (WR4201&amp;4292).
11/6/18: YYT-Updated Product Design to 3D Design (WR4292).
9/20/18: JNR-Updated Construction BIM/CIM to Construction BIM (WR4139).
9/19/18: JNR-Added Photonics (WR4180).</description>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3D Design</fullName>
                <color>#009900</color>
                <label>3D Design</label>
            </value>
            <value>
                <fullName>3D Manufacturing</fullName>
                <color>#666666</color>
                <label>3D Manufacturing</label>
            </value>
            <value>
                <fullName>Construction BIM</fullName>
                <color>#FF6600</color>
                <label>Construction BIM</label>
            </value>
            <value>
                <fullName>Dental and Medical</fullName>
                <color>#993399</color>
                <label>Dental and Medical</label>
            </value>
            <value>
                <fullName>Photonics</fullName>
                <color>#CC0000</color>
                <label>Photonics</label>
            </value>
            <value>
                <fullName>Public Safety Forensics</fullName>
                <color>#0B6FCE</color>
                <label>Public Safety Forensics</label>
            </value>
            <value>
                <fullName>3D Machine Vision</fullName>
                <isActive>false</isActive>
                <label>3D Machine Vision</label>
            </value>
            <value>
                <fullName>Construction BIM/CIM</fullName>
                <isActive>false</isActive>
                <label>Construction BIM/CIM</label>
            </value>
            <value>
                <fullName>Factory Metrology</fullName>
                <isActive>false</isActive>
                <label>Factory Metrology</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>