force-app/main/default/objects/SAP_Material_Mapping__c/fields/Warranty_Expiration_Formula__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Expiration_Formula__c</fullName>
    <label>Default Warranty Expiration in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>