force-app/main/default/objects/SAP_Material_Mapping__c/fields/Warranty_Plan__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Plan__c</fullName>
    <label>Warranty Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>